refactor: using copilot with claude sonnet 3.7 to remove pmd violations